# vr

./: CHANGELOG.md  Cargo.toml  README.md  VR.tla
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
VR.toolbox/: .project
examples/: basic.rs  simulation.rs  single_request.rs
src/: backup.rs  buffer.rs  client.rs  client_table.rs  configuration.rs  crash.rs  driver.rs  group.rs  health.rs  identifiers.rs  lib.rs  local.rs  log.rs  mail.rs  mailbox.rs  message.rs  model.rs  network.rs  new_model.rs  nonce.rs  order.rs  primary.rs  protocol.rs  replica.rs  request.rs  role.rs  service.rs  stamps.rs  state.rs  status.rs  table.rs  view_change.rs  viewstamp.rs
src/driver/: basic.rs  local.rs  mod.rs
src/replica/: backup.rs  mod.rs  primary.rs  state.rs  status.rs
src/state/: local.rs  mod.rs
