[package]
name = "viewstamped-replication"
description = "A Rust-based implementation of the Viewstamped Replication consensus protocol."
version = "0.8.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/vr"
repository = "https://github.com/misalcedo/vr"
documentation = "https://docs.rs/viewstamped-replication"

[profile.release]
lto = true
debug = true

[features]
default = []

[dev-dependencies]
log = { version = "0.4.21" }
env_logger = "0.11.2"

[dependencies]
bytes = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
