[package]
name = "viewstamped-replication"
description = "A Rust-based implementation of the Viewstamped Replication consensus protocol."
version = "0.9.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/vr"
repository = "https://github.com/misalcedo/vr"
documentation = "https://docs.rs/viewstamped-replication"

[profile.release]
lto = true
debug = true

[features]
default = []

[dev-dependencies]
clap = { version = "4.5.4", features = ["color", "derive"] }
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dependencies]
bytes = "1.6.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
